# claude-agent-skill

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
doc/: IMPLEMENTATION_PROMPT.md  SERVER_DEPLOY_PROMPT.md  TZ_Orchestra.docx  TZ_Orchestra_v2.md
scripts/: guard_bash.py
src/orchestra/: __init__.py  agents.py  chat.py  cli.py  config.py  db.py  guards.py  models.py  orchestrator.py  rbac.py  reporter.py  runner.py  secrets.py  ssh.py  telegram_bot.py
src/orchestra/web/: __init__.py  app.py  auth.py  sse.py
src/orchestra/web/routes/: __init__.py  audit.py  auth_routes.py  chat.py  dashboard.py  secrets.py  servers.py  ssh.py  stream.py  tasks.py  telegram.py  users.py
src/orchestra/web/static/: app.js
src/orchestra/web/templates/: audit.html  base.html  chat.html  dashboard.html  login.html  secrets.html  servers.html  ssh.html  task_detail.html  tasks.html  telegram.html  users.html
tests/: conftest.py  test_bot.py  test_chat.py  test_cli.py  test_db.py  test_guards.py  test_orchestrator.py  test_rbac.py  test_runner.py  test_secrets.py  test_tracking.py  test_web.py
