[project]
name = "orchestra"
version = "2.0.0"
description = "Orchestra — multi-agent orchestrator (Claude Agent SDK) with Telegram bot, web admin panel, SSH control, and dynamic secrets."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "asyncssh>=2.18",
    "cryptography>=43",
    "bcrypt>=4.2",
    "pyjwt>=2.9",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[project.scripts]
orchestra = "orchestra.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"
